--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,14 @@ debug.log
 /upgrade/
 /upgrade-temp-backup/
 /uploads/
-/themes/
 /plugins/.DS_Store
 /plugins/webcr/.DS_Store
 /plugins/debug-bar/
 /plugins/query-monitor/
 /plugins/svg-support/
+plugins/contact-form-7/
+plugins/developry-google-fonts/
+themes/twentytwentyfour/
+themes/twentytwentythree/
+themes/twentytwentytwo/
+themes/developry-lite/
