--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,5 @@ debug.log
 /plugins/.DS_Store
 /plugins/webcr/.DS_Store
 /plugins/webcr/admin/.DS_Store
+/plugins/debug-bar-actions-and-filters-addon
 
