--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ debug.log
 /plugins/svg-support/
 plugins/contact-form-7/
 plugins/developry-google-fonts/
+themes/twentytwentyfive/
 themes/twentytwentyfour/
 themes/twentytwentythree/
 themes/twentytwentytwo/
