--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,8 +1,7 @@
 # Site settings
 title: Sanctuary Watch Graphic Data
 description: >-
-  User manual and documentation for the sanctuarywatch_graphicdata package.
-  Tools and utilities for processing and visualizing marine sanctuary data.
+  Documentation for the Graphic Data WordPress plugin and theme. Graphic Data is a platform for displaying graphics and data in fascinating ways.
 
 # Build settings
 markdown: kramdown
