--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -26,7 +26,7 @@ kramdown:
 # Navigation (optional - customize as needed)
 header_pages:
   - index.md
-  - code.md
+  - getting_started.md
 
 # Exclude files from processing
 exclude:
