--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Sanctuary Watch Graphic Data
+title: Graphic Data
 description: >-
   Documentation for the Graphic Data WordPress plugin and theme. Graphic Data is a platform for displaying graphics and data in fascinating ways.
 
